# tarassov.me

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  .spectral.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REMOVING-THE-DEMO.md  SECURITY.md  THIRD_PARTY_NOTICES.md  envrc.sample  project.env  renovate.json  vcpkg.json
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: builder-cache.yml  ci.yml  release.yml
.gitlab/merge_request_templates/: Default.md
config/: config.json  config.production.json  config.sample.json  worker.json
config/bench/: baseline.json  max.json  pool20.json  pool50.json  threads8.json
deploy/: mailpit.yaml  postgres-tarassov-me.yaml
docker/: .env  .env.everything  .env.full  .env.kafka  .env.monitoring  .env.replica  .env.sentinel  .env.worker  Dockerfile  docker-compose.override.yml.sample  docker-compose.yml  prometheus-rules.yml  prometheus.yml  redis-sentinel.conf  setup-primary-replication.sh  setup-replica.sh
docs/: BENCHMARKS.md  CONFIG.md  CONVENTIONS.md  Doxyfile  EXAMPLES.md  INDEX.md  PATTERNS-FROM-FLASK-BASE.md  RUNBOOK.md  SLO.md  TESTING.md  openapi.yaml
docs/adr/: 0001-drogon-http-framework.md  0002-nlohmann-json.md  0003-header-only-modules.md  0004-global-singletons.md  0005-spa-split.md  0006-api-versioning.md  README.md
docs/design/: blog-article-1a-reference.html  blog-list-2a-reference.html  cover-2a-reference.html  cover-desktop-4a-reference.html  cover-mobile-3b-reference.html  mobile-home-5b-reference.html
frontend/: .gitignore  Dockerfile  Dockerfile.dockerignore  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/public/: theme.js
frontend/public-site/: .htmlvalidate.json  blog-single.html  blog.html  index.html  portfolio-item-01.html  portfolio-item-02.html  portfolio-item-03.html  robots.txt  sitemap.xml
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
helm/cpp-api/: Chart.yaml  values-prod.example.yaml  values.yaml
helm/cpp-env/: Chart.yaml  values-ci.yaml  values-demo.yaml  values-minimal.yaml  values-stage.yaml  values.yaml
helm/cpp-frontend/: Chart.yaml  values-prod.example.yaml  values.yaml
helm/cpp-worker/: Chart.yaml  values-prod.example.yaml  values.yaml
helm/tarassov-me/: Chart.yaml  values-prod.example.yaml  values.yaml
helm/tarassov-me-env/: Chart.yaml  values-ci.yaml  values-demo.yaml  values-minimal.yaml  values-stage.yaml  values.yaml
helm/tarassov-me-frontend/: Chart.yaml  values-prod.example.yaml  values.yaml
helm/tarassov-me-worker/: Chart.yaml  values-prod.example.yaml  values.yaml
migrations/: 000_updated_at_trigger.sql  001_users_and_roles.sql  002_used_tokens.sql  003_audit_log.sql  004_admin_permission_sentinel.sql  005_api_keys.sql  006_add_posts_table.sql  007_add_post_topic_tags.sql  README.md
scripts/: bench-incremental.sh  bench.sh  check-helm-render.sh  check-openapi-drift.sh  check-routes-registered.sh  check-test-buckets.sh  deploy-demo.sh  env-check.sh  init-project.sh  lint-openapi.sh  make-jwt.sh  new-endpoint.sh  new-job.sh  new-migration.sh  new-react-page.sh  new-resource.sh  prod-check.sh  smoke.sh
src/: main.cpp  version.hpp.in  worker_main.cpp
src/api/: AccountController.hpp  AdminController.hpp  Api.hpp  ApiKeyController.hpp  AuditController.hpp  AuthController.hpp  ContactController.hpp  Endpoints.hpp  Guards.hpp  HandlerSupport.hpp  HealthController.hpp  JobsController.hpp  Middleware.hpp  PostsController.hpp  RequestUtils.hpp  UploadController.hpp  Validation.hpp
src/cache/: Cache.hpp
src/core/: Core.hpp
src/database/: Database.hpp  Migrations.hpp
src/domain/: ApiKey.hpp  AuditEntry.hpp  Post.hpp  Role.hpp  User.hpp
src/email/: AccountEmailWorker.hpp  AccountEmails.hpp  GenericEmail.hpp  Mailer.hpp  Templates.hpp
src/jobs/: BuiltinHandlers.hpp  Dispatcher.hpp  Job.hpp  Jobs.hpp
src/messaging/: Messaging.hpp
src/observability/: Observability.hpp  Trace.hpp
src/repositories/: ApiKeyRepository.hpp  AuditRepository.hpp  CrudBase.hpp  ListQuery.hpp  PostRepository.hpp  RepoErrors.hpp  RoleRepository.hpp  SqlErrors.hpp  UserRepository.hpp
src/security/: ApiKeys.hpp  Audit.hpp  Auth.hpp  Csrf.hpp  Idempotency.hpp  Jwt.hpp  Password.hpp  RateLimit.hpp  SessionCookies.hpp  SessionStore.hpp  Tokens.hpp
src/storage/: Storage.hpp
src/tasks/: Tasks.hpp
src/utils/: Base64.hpp  Config.hpp  Crypto.hpp  ErrorResponse.hpp  Pg.hpp  Retry.hpp  Strings.hpp  Time.hpp
src/webhooks/: Webhooks.hpp
templates/email/: change_email.html  change_email.txt  confirm.html  confirm.txt  invite.html  invite.txt  reset_password.html  reset_password.txt
tests/: InMemoryCache.hpp  test_fixtures.hpp  test_helpers.hpp  test_main.cpp
tests/api/: test_api_endpoints.cpp  test_health_endpoints.cpp  test_jobs_endpoints.cpp
tests/e2e/: test_http_e2e.cpp
tests/integration/: test_account_flow.cpp  test_admin_flow.cpp  test_api_keys.cpp  test_audit_flow.cpp  test_auth_flow.cpp  test_cache.cpp  test_contact.cpp  test_core.cpp  test_database.cpp  test_email_jobs.cpp  test_jobs.cpp  test_migrations.cpp  test_post.cpp  test_ratelimit_redis.cpp
tests/unit/: test_auth.cpp  test_auth_permissions.cpp  test_base64.cpp  test_cache_cached.cpp  test_client_ip.cpp  test_config.cpp  test_csrf.cpp  test_di_fake.cpp  test_domain_serialization.cpp  test_email_mask.cpp  test_handler_support.cpp  test_health_registry.cpp  test_job_dispatch.cpp  test_list_query.cpp  test_migration_marker.cpp  test_module_guards.cpp  test_observability.cpp  test_password.cpp  test_password_check.cpp  test_pg_conninfo.cpp  test_post_domain.cpp  test_ratelimit.cpp  test_request_utils.cpp  test_require_confirmed.cpp  test_retry.cpp  test_storage.cpp  test_templates.cpp  test_tokens.cpp  (+3 more)
(+162 files in other folders)
